test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_types/extern_variable_initializer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[16]:
  int
  identifier(main)
  (
  void
  )
  {
  extern
  int
  identifier(i)
  =
  const int(0)
  ;
  return
  identifier(i)
  ;
  }
